hello-php-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-php
  labels:
    app: hello-php
spec:
  selector:
    app: hello-php
  ports:
    - name: http
      port: 8080
      targetPort: http
